[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI/Fonts/OpenSans-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/UI/Buttons/ExitMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/Buttons/PlayAgain.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/music/menu_music.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/font/Open_Sans_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/scripts/GameOver.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/music/game_over_music1.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 15
outline_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer"]

[node name="Container" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1000, 384 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Container"]
stream = ExtResource( 4 )
volume_db = -1.0
bus = "Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Container"]
stream = ExtResource( 7 )
volume_db = 3.0
bus = "Music"

[node name="VBOX" type="VBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -720.0
margin_top = -693.0
margin_right = 720.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Container/VBOX"]
margin_right = 1440.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/VBOX"]
margin_top = 293.0
margin_right = 1440.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 2 )
text = "Well Played!"
align = 1

[node name="HBox" type="HBoxContainer" parent="Container/VBOX"]
margin_top = 368.0
margin_right = 1440.0
margin_bottom = 568.0
rect_min_size = Vector2( 1440, 200 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Container/VBOX/HBox"]
margin_left = 220.0
margin_right = 1220.0
margin_bottom = 200.0
rect_min_size = Vector2( 1000, 0 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScore" type="HBoxContainer" parent="Container/VBOX/HBox/VBox"]
margin_top = 17.0
margin_right = 1000.0
margin_bottom = 51.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Container/VBOX/HBox/VBox/TotalScore"]
margin_left = 390.0
margin_right = 531.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "Total score: "

[node name="Score" type="Label" parent="Container/VBOX/HBox/VBox/TotalScore"]
margin_left = 535.0
margin_right = 610.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "'score'"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="HBoxContainer" parent="Container/VBOX/HBox/VBox"]
margin_top = 105.0
margin_right = 1000.0
margin_bottom = 139.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Container/VBOX/HBox/VBox/Kills"]
margin_left = 438.0
margin_right = 499.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "Kills: "

[node name="Kills" type="Label" parent="Container/VBOX/HBox/VBox/Kills"]
margin_left = 503.0
margin_right = 562.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "'kills'"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="HBoxContainer" parent="Container/VBOX/HBox/VBox"]
margin_top = 149.0
margin_right = 1000.0
margin_bottom = 183.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Container/VBOX/HBox/VBox/Time"]
margin_left = 388.0
margin_right = 543.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "Time played: "

[node name="Time" type="Label" parent="Container/VBOX/HBox/VBox/Time"]
margin_left = 547.0
margin_right = 612.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "'time'"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" type="HBoxContainer" parent="Container/VBOX/HBox/VBox"]
margin_top = 61.0
margin_right = 1000.0
margin_bottom = 95.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Container/VBOX/HBox/VBox/Wave"]
margin_left = 423.0
margin_right = 500.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "Wave: "

[node name="Wave" type="Label" parent="Container/VBOX/HBox/VBox/Wave"]
margin_left = 504.0
margin_right = 577.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "'wave'"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" parent="Container/VBOX" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 588.0
margin_right = 1440.0
margin_bottom = 648.0
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2

[node name="ExitToMenu" parent="Container/VBOX" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 668.0
margin_right = 1440.0
margin_bottom = 728.0
rect_min_size = Vector2( 0, 60 )
mouse_default_cursor_shape = 2

[node name="Label" parent="Container/VBOX/ExitToMenu" index="0"]
margin_left = -144.5
margin_right = 144.5
text = "Exit to Menu"

[node name="Seconds" type="Timer" parent="Container"]

[connection signal="timeout" from="Container/Seconds" to="Container" method="_on_Seconds_timeout"]

[editable path="Container/VBOX/PlayAgainButton"]
[editable path="Container/VBOX/ExitToMenu"]
